--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/icons8-estate-50.png" type="image/png" sizes="16x16">
+     <style>
+      body::-webkit-scrollbar {
+        display: none;
+      }
+    </style>
     <title>Velocity Estate</title>
   </head>
   <body>
